addition of yaml package

--- a/R/Final Project.qmd
+++ b/R/Final Project.qmd
@@ -12,6 +12,7 @@ here::here()
 install.packages("here")
 install.packages("gtsummary")
 install.packages("renv")
+install.packages("yaml")
 
 library(tidyverse)
 library(gtsummary)
