--- a/R/Final Project.qmd
+++ b/R/Final Project.qmd
@@ -19,8 +19,10 @@ library(broom)
 ```
 
 # Read in data to R
-
-sauces \<- read.csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-08-08/sauces.csv") view(sauces)
+```{r}
+sauces <- read.csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-08-08/sauces.csv")
+```
+view(sauces)
 
 The sauces dataset involves Hot Ones sauces that have been tried over the 21 seasons and their Scoville Heat Units.
 
@@ -29,7 +31,7 @@ The sauces dataset involves Hot Ones sauces that have been tried over the 21 sea
 ```{r}
 #| echo: FALSE
 #| label: tbl-one
-#| tbl-cap: "Hot Ones Sauces Over the Seasons"
+#| tbl-cap: "This is a table of Hot Ones sauces over the seasons"
 
 sauces_col <- c("season", "sauce_number", "sauce_name", "scoville")
 sauces <- read_csv(here::here("data/raw/sauces.csv"),
@@ -57,12 +59,13 @@ table1
 @tbl-one looks at different sauces used for each Hot Ones season and their Scoville Heat Unit.
 
 ```{r}
+#| echo: FALSE
 #| label: fig-hist
 #| fig-cap: "This is a histogram of Hot Ones sauces"
 hist(sauces$scoville)
 ```
-@fig-hist is a histogram of the distribution of Scoville Heat Units in the sauces dataset.
 
+@fig-hist is a histogram of the distribution of Scoville Heat Units in the sauces dataset.
 
 @fig-hist contains a histogram of Scoville Heat Units for the sauces dataset and @tbl-one is a table of Hot Ones sauces over the seasons and their Scoville Heat Unit.
 
@@ -75,7 +78,7 @@ scoville_szn2 <- inline_text(table1, variable = "scoville",
 
 A greater proportion of Season 2 (`r scoville_szn2`) than Season 1 (`r scoville_szn1`) had more Scoville Heat Units.
 
-There were `r 200 + 10` sauces over the Hot Ones seasons
+There were `r 200 + 10` sauces over the Hot Ones seasons.
 
 ```{r}
 scoville_avg <- mean(sauces$scoville, na.rm = TRUE)
@@ -83,20 +86,24 @@ scoville_avg <- mean(sauces$scoville, na.rm = TRUE)
 
 The average amount of scoville was `r scoville_avg`
 
+```{r}
 stats <- list(n = nrow(sauces), scoville_avg = mean(sauces$scoville))
+```
 
 There were `r stats$n` sauces with a mean Scoville of `r stats$scoville_avg`.
 
 ```{r}
 inline_text(table1, variable = "scoville", column = "Season 12")
 ```
-Season 12 had a median Scoville Heat Unit of 60,500. 
+
+Season 12 had a median Scoville Heat Unit of 60,500.
 
 # Univariate regression
 
 ```{r}
-#| label: regress
-#| tbl-cap: "Regression Results"
+#| echo: FALSE
+#| label: tbl-two
+#| tbl-cap: "This is a regression table for the sauces dataset"
 regress1 <- tbl_uvregression(
 	sauces,
 	y = scoville,
@@ -105,7 +112,7 @@ regress1 <- tbl_uvregression(
 regress1
 ```
 
-@regress is a univariate regression for the sauces dataset
+@tbl-two is a univariate regression with scoville as the dependent variable.
 
 # Multivariable regressions
 
@@ -122,7 +129,10 @@ linear_model_int <- lm(scoville ~ season*sauce_number + sauce_name,
 # Regression Tables
 
 ```{r}
-tbl_regression(
+#| echo: FALSE
+#| label: tbl-three
+#| tbl-cap: "This is a regression table produced from the sauces dataset"
+regress2 <- tbl_regression(
 	linear_model,
 	intercept = TRUE,
 	label = list(
@@ -130,9 +140,13 @@ tbl_regression(
 		sauce_number ~ "Sauce Number",
 		sauce_name ~ "Sauce Name"
 	))
+regress2
 ```
 
+@tbl-three is a multivariable regression table produced from the linear_model function.
+
 ```{r}
+#| echo: FALSE
 tbl_no_int <- tbl_regression(
 	linear_model,
 	intercept = TRUE,
@@ -154,21 +168,24 @@ tbl_int <- tbl_regression(
 ```
 
 ```{r}
-tbl_merge(list(tbl_no_int, tbl_int), 
+#| echo: FALSE
+#| label: tbl-four
+#| tbl-cap: "This is a regression table of Model 1 and Model 2"
+regress3 <- tbl_merge(list(tbl_no_int, tbl_int), 
           tab_spanner = c("**Model 1**", "**Model 2**"))
+regress3
 ```
 
+@tbl-four is a multivariable regression table comparing a model with and without interaction between the variables.
+
 # Renv
-Initialize a project
-renv::init() 
 
-Track dependencies via a lockfile
-renv::snapshot() 
+Initialize a project renv::init()
 
-source("renv/activate.R") 
+Track dependencies via a lockfile renv::snapshot()
 
-Restore an environment 
-renv::restore() 
+source("renv/activate.R")
 
-Status of project library 
-renv::status()
+Restore an environment renv::restore()
+
+Status of project library renv::status()
