--- a/R/Final.qmd
+++ b/R/Final.qmd
@@ -6,30 +6,25 @@ format:
     theme: yeti
 ---
 
-```{r}
-here::here()
-```
-
-# Load packages
+The sauces dataset involves Hot Ones sauces that have been tried over the 21 seasons and their Scoville Heat Units. It includes information on different sauces used every season, the sauce number per season (out of 10 sauces per season), the number of seasons of Hot Ones, and the Scoville of each sauce. The dataset derives from R for Data Science Online Learning Community via the Tidy Tuesday project.
 
 ```{r}
+#| echo: FALSE
+#| message: FALSE
 library(tidyverse)
 library(gtsummary)
 library(broom)
 ```
 
-# Read in data to R
-```{r}
-sauces <- read.csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-08-08/sauces.csv")
-```
-view(sauces)
-
-The sauces dataset involves Hot Ones sauces that have been tried over the 21 seasons and their Scoville Heat Units.
-
-# Customization of `tbl_summary()`
-
 ```{r}
 #| echo: FALSE
+sauces <- read.csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2023/2023-08-08/sauces.csv")
+```
+
+# Customization of `tbl_summary()`
+```{r}
+#| echo: FALSE
+#| message: FALSE
 #| label: tbl-one
 #| tbl-cap: "This is a table of Hot Ones sauces over the seasons"
 
@@ -70,6 +65,7 @@ hist(sauces$scoville)
 @fig-hist contains a histogram of Scoville Heat Units for the sauces dataset and @tbl-one is a table of Hot Ones sauces over the seasons and their Scoville Heat Unit.
 
 ```{r}
+#| echo: FALSE
 scoville_szn1 <- inline_text(table1, variable = "scoville", 
                         						 column = "Season 1")
 scoville_szn2 <- inline_text(table1, variable = "scoville", 
@@ -81,12 +77,14 @@ A greater proportion of Season 2 (`r scoville_szn2`) than Season 1 (`r scoville_
 There were `r 200 + 10` sauces over the Hot Ones seasons.
 
 ```{r}
+#| echo: FALSE
 scoville_avg <- mean(sauces$scoville, na.rm = TRUE)
 ```
 
 The average amount of scoville was `r scoville_avg`
 
 ```{r}
+#| echo: FALSE
 stats <- list(n = nrow(sauces), scoville_avg = mean(sauces$scoville))
 ```
 
@@ -98,12 +96,11 @@ inline_text(table1, variable = "scoville", column = "Season 12")
 
 Season 12 had a median Scoville Heat Unit of 60,500.
 
-# Univariate regression
-
+# Univariate Regression
 ```{r}
 #| echo: FALSE
 #| label: tbl-two
-#| tbl-cap: "This is a regression table for the sauces dataset"
+#| tbl-cap: "This is a univariate regression of Scoville by Season, Sauce Number, and Sauce Name"
 regress1 <- tbl_uvregression(
 	sauces,
 	y = scoville,
@@ -114,24 +111,23 @@ regress1
 
 @tbl-two is a univariate regression with scoville as the dependent variable.
 
-# Multivariable regressions
-
+# Multivariable Regression
 ```{r}
+#| echo: FALSE
 linear_model <- lm(scoville ~ season + sauce_number + sauce_name,
 									 data = sauces)
 ```
 
 ```{r}
+#| echo: FALSE
 linear_model_int <- lm(scoville ~ season*sauce_number + sauce_name,
 											 data = sauces)
 ```
 
-# Regression Tables
-
 ```{r}
 #| echo: FALSE
 #| label: tbl-three
-#| tbl-cap: "This is a regression table produced from the sauces dataset"
+#| tbl-cap: "This is a multivariable regression of Scoville by Season, Sauce Number, and Sauce Name"
 regress2 <- tbl_regression(
 	linear_model,
 	intercept = TRUE,
@@ -147,6 +143,7 @@ regress2
 
 ```{r}
 #| echo: FALSE
+#| warning: FALSE
 tbl_no_int <- tbl_regression(
 	linear_model,
 	intercept = TRUE,
@@ -170,7 +167,7 @@ tbl_int <- tbl_regression(
 ```{r}
 #| echo: FALSE
 #| label: tbl-four
-#| tbl-cap: "This is a regression table of Model 1 and Model 2"
+#| tbl-cap: "This is a merged multivariable regression table of Scoville by Season, Sauce Number, and Sauce Name"
 regress3 <- tbl_merge(list(tbl_no_int, tbl_int), 
           tab_spanner = c("**Model 1**", "**Model 2**"))
 regress3
@@ -178,14 +175,3 @@ regress3
 
 @tbl-four is a multivariable regression table comparing a model with and without interaction between the variables.
 
-# Renv
-
-Initialize a project renv::init()
-
-Track dependencies via a lockfile renv::snapshot()
-
-source("renv/activate.R")
-
-Restore an environment renv::restore()
-
-Status of project library renv::status()
